--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 tensorflow_play/tf_guide/aclImdb/
 tensorflow_play/tf_guide/dnn_model/
 tensorflow_play/tf_guide/my_dir/
+tensorflow_play/tf_guide/traffic/
