--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ tensorflow_play/tf_guide/aclImdb/
 tensorflow_play/tf_guide/dnn_model/
 tensorflow_play/tf_guide/my_dir/
 tensorflow_play/tf_guide/traffic/
+tensorflow_play/images_tf/models/
