Image captioning, not the most accurate, only trained for 3 epochs and on 6k images, instead of the full 20 epochs and 88k images

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ tensorflow_play/images_tf/models/
 tensorflow_play/audio_tf/data/ 
 tensorflow_play/text_tf/annotations/
 tensorflow_play/text_tf/train2014/
+checkpoints/
