Finished pix2pix gan model, training IP

--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,5 @@ tensorflow_play/audio_tf/datasets/
 tensorflow_play/audio_tf/dogs_and_cats_yamnet/
 tensorflow_play/GAN/*.png
 tensorflow_play/GAN/training_checkpoints/
+tensorflow_play/GAN/logs/
 
