--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ tensorflow_play/GAN/generator_pix2pix/
 # pytorch play ignore 
 pytorch_play/basics/data
 pytorch_play/images/PennFudanPed
+pytorch_play/images/hymenoptera_data
