doing training of DCGAN, taking a very long time, no GPU

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ pytorch_play/basics/data
 pytorch_play/images/PennFudanPed
 pytorch_play/images/hymenoptera_data
 pytorch_play/data/
+pytorch_play/images/celeba/
