visualizing and saving model

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ pytorch_play/images/PennFudanPed
 pytorch_play/images/hymenoptera_data
 pytorch_play/data/
 pytorch_play/images/celeba/
+pytorch_play/images/DCGAN_save/
