--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ pytorch_play/images/hymenoptera_data
 pytorch_play/data/
 pytorch_play/images/celeba/
 pytorch_play/images/DCGAN_save/
+pytorch_play/images/MNIST
