--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ pytorch_play/images/fbdeit_scripted.pt
 pytorch_play/images/fbdeit_scripted_quantized.pt
 pytorch_play/text/data
 pytorch_play/text/data_2
+pytorch_play/audio/_assets/
